Renamed ember_production_rate (embers/kJ) to heat_per_firebrand (kJ/firebrand)

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -6413,8 +6413,8 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
     flame_length_matrix       = output_matrices["flame_length"]
     time_of_arrival_matrix    = output_matrices["time_of_arrival"]
 
-    # Extract the firebrand_production_rate from the spot_config if provided
-    firebrand_production_rate = spot_config["firebrand_production_rate"] if spot_config else None
+    # Extract the heat_per_firebrand from the spot_config if provided
+    heat_per_firebrand = spot_config["heat_per_firebrand"] if spot_config else None
 
     # Initialize max spread rates in the x and y dimensions to 0.0
     max_spread_rate_x = 0.0
@@ -6534,7 +6534,7 @@ def spread_fire_one_timestep(space_time_cubes, output_matrices, frontier_cells, 
                     expected_firebrand_count = expected_firebrand_production(fire_behavior,
                                                                              elevation_gradient,
                                                                              cube_resolution,
-                                                                             firebrand_production_rate)
+                                                                             heat_per_firebrand)
                     new_ignitions            = spread_firebrands(space_time_cubes, output_matrices, cube_resolution,
                                                                  space_time_coordinate, rand_gen,
                                                                  expected_firebrand_count, spot_config)
@@ -6623,7 +6623,7 @@ def spread_fire_with_phi_field(space_time_cubes, output_matrices, cube_resolutio
     - spot_ignitions            :: dictionary of (ignition_time -> ignited_cells) (Optional: needed for spotting)
     - spot_config               :: dictionary of spotting parameters (Optional: needed for spotting)
       - random_seed                   :: integer to seed a numpy.random.Generator object
-      - firebrand_production_rate     :: firebrands/kJ
+      - heat_per_firebrand            :: kJ/firebrand
       - mean_distance                 :: meters
       - flin_exp                      :: mean_distance multiplier [I^flin_exp]
       - ws_exp                        :: mean_distance multiplier [U^ws_exp]
@@ -7118,7 +7118,7 @@ output_matrices["phi"][50,50] = -1.0
 
 spot_config = {
     "random_seed"                 : 1234567890,
-    "firebrand_production_rate"   : 1e-6,       # firebrands/kJ
+    "heat_per_firebrand"          : 1e6,        # kJ/firebrand
     "mean_distance"               : 10.0,       # meters
     "flin_exp"                    : 0.3,        # mean_distance multiplier [I^flin_exp]
     "ws_exp"                      : 0.55,       # mean_distance multiplier [U^ws_exp]
@@ -7438,7 +7438,7 @@ deposited.
 from math import sqrt
 
 
-def expected_firebrand_production(fire_behavior, elevation_gradient, cube_resolution, firebrand_production_rate=0.03):
+def expected_firebrand_production(fire_behavior, elevation_gradient, cube_resolution, heat_per_firebrand=1e6):
     """
     Return the expected number of firebrands produced by an entire cell when it burns given:
     - fire_behavior         :: dictionary of surface or crown fire behavior values
@@ -7454,7 +7454,7 @@ def expected_firebrand_production(fire_behavior, elevation_gradient, cube_resolu
       - band_duration            :: minutes
       - cell_height              :: meters
       - cell_width               :: meters
-    - firebrand_production_rate  :: firebrands/kJ
+    - heat_per_firebrand    :: kJ/firebrand
     """
     if fire_behavior["spread_rate"] == 0.0:
         return 0.0
@@ -7481,8 +7481,8 @@ def expected_firebrand_production(fire_behavior, elevation_gradient, cube_resolu
         # Calculate the expected number of firebrands produced in this cell
         #================================================================================================
 
-        cell_heat_output = heat_output_per_area * cell_area             # kJ
-        firebrand_count  = cell_heat_output * firebrand_production_rate # number of firebrands
+        cell_heat_output = heat_output_per_area * cell_area      # kJ
+        firebrand_count  = cell_heat_output / heat_per_firebrand # number of firebrands
         return firebrand_count
 #+end_src
 
@@ -8493,7 +8493,7 @@ And here's the result:
   0.5622499284950391)}
 ```
 
-So if we multiply the `representative-spot-ignition-probabilities` by the firebrand count range given with an `firebrand_production_rate` of 0.03 (see above), we get the following:
+So if we multiply the `representative-spot-ignition-probabilities` by the firebrand count range given with a `heat_per_firebrand` of 33.33 kJ (see above), we get the following:
 
 #+NAME: estimate-spot-fire-count2
 #+begin_src clojure
@@ -8520,7 +8520,7 @@ which results in:
 We can see that depending on the surface fuel model, we can get
 anywhere from 9 to 827,350 spot fires ignited by one burning cell per
 timestep in the upper quartile of temperature/moisture/distance/decay
-conditions with that ridiculously high `firebrand_production_rate`.
+conditions with that ridiculously low `heat_per_firebrand`.
 Hopefully this provides sufficient direction for selecting a more
 reasonable default for that parameter.
 
